src/syntax/latex/snapshots/texlab__syntax__latex__parser__tests__label_definition_simple.snap
---
source: src/syntax/latex/parser.rs
expression: "setup(r#\"\\label{foo}\"#)"

---
ROOT@0..11
  PREAMBLE@0..11
    LABEL_DEFINITION@0..11
      LABEL_DEFINITION_NAME@0..6 "\\label"
      CURLY_GROUP_WORD@6..11
        L_CURLY@6..7 "{"
        WORD@7..10 "foo"
        R_CURLY@10..11 "}"

