src/syntax/latex/snapshots/texlab__syntax__latex__parser__tests__label_reference_range_incomplete.snap
---
source: src/syntax/latex/parser.rs
expression: "setup(r#\"\\crefrange{foo}\"#)"

---
ROOT@0..15
  PREAMBLE@0..15
    LABEL_REFERENCE_RANGE@0..15
      LABEL_REFERENCE_RANGE_NAME@0..10 "\\crefrange"
      CURLY_GROUP_WORD@10..15
        L_CURLY@10..11 "{"
        WORD@11..14 "foo"
        R_CURLY@14..15 "}"
      MISSING@15..15 ""

