src/syntax/latex/snapshots/texlab__syntax__latex__parser__tests__label_reference_range_simple.snap
---
source: src/syntax/latex/parser.rs
expression: "setup(r#\"\\crefrange{foo}{bar}\"#)"

---
ROOT@0..20
  PREAMBLE@0..20
    LABEL_REFERENCE_RANGE@0..20
      LABEL_REFERENCE_RANGE_NAME@0..10 "\\crefrange"
      CURLY_GROUP_WORD@10..15
        L_CURLY@10..11 "{"
        WORD@11..14 "foo"
        R_CURLY@14..15 "}"
      CURLY_GROUP_WORD@15..20
        L_CURLY@15..16 "{"
        WORD@16..19 "bar"
        R_CURLY@19..20 "}"

