src/syntax/latex/snapshots/texlab__syntax__latex__parser__tests__latex_include_equality_sign.snap
---
source: src/syntax/latex/parser.rs
assertion_line: 1504
expression: "setup(r#\"\\include{foo=bar}\"#)"

---
ROOT@0..17
  PREAMBLE@0..17
    LATEX_INCLUDE@0..17
      LATEX_INCLUDE_NAME@0..8 "\\include"
      CURLY_GROUP_WORD_LIST@8..17
        L_CURLY@8..9 "{"
        KEY@9..16
          WORD@9..12 "foo"
          EQUALITY_SIGN@12..13 "="
          WORD@13..16 "bar"
        R_CURLY@16..17 "}"

