src/syntax/latex/snapshots/texlab__syntax__latex__parser__tests__latex_include_simple.snap
---
source: src/syntax/latex/parser.rs
expression: "setup(r#\"\\include{foo/bar}\"#)"

---
ROOT@0..17
  PREAMBLE@0..17
    LATEX_INCLUDE@0..17
      LATEX_INCLUDE_NAME@0..8 "\\include"
      CURLY_GROUP_WORD_LIST@8..17
        L_CURLY@8..9 "{"
        WORD@9..16 "foo/bar"
        R_CURLY@16..17 "}"

