src/syntax/latex/snapshots/texlab__syntax__latex__parser__tests__math_operator_no_impl.snap
---
source: src/syntax/latex/parser.rs
expression: "setup(r#\"\\DeclareMathOperator{\\foo}\"#)"

---
ROOT@0..26
  PREAMBLE@0..26
    MATH_OPERATOR@0..26
      MATH_OPERATOR_NAME@0..20 "\\DeclareMathOperator"
      CURLY_GROUP_COMMAND@20..26
        L_CURLY@20..21 "{"
        GENERIC_COMMAND_NAME@21..25 "\\foo"
        R_CURLY@25..26 "}"
      MISSING@26..26 ""

